# MobiusSec

./: .gitignore  BUG_TRACKER.md  PRODUCTION_READINESS_PLAN.md  README.md  SPEC.md  pyproject.toml  pytest.ini
api/: package.json  tsconfig.json
api/src/: index.ts
core/mobiussec/: __init__.py  android_analyzer.py  cicd.py  cli.py  cross_platform.py  deploy.py  diff_analyzer.py  extractor.py  ios_analyzer.py  masvs_mapper.py  models.py  portfolio_bridge.py  privacy_engine.py  remediation.py  reports.py  sbom_generator.py  scanner.py  secrets_scanner.py  stix_export.py  yara_engine.py
dashboard/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts
dashboard/src/pages/: BridgePage.tsx  DashboardPage.tsx  DiffPage.tsx  FindingsPage.tsx  MASVSPage.tsx  PrivacyPage.tsx  SBOMPage.tsx  ScanPage.tsx
dashboard/src/types/: index.ts
docker/: Dockerfile  docker-compose.yml
rules/semgrep/: android-security.yaml  ios-security.yaml
tests/: test_android_analyzer.py  test_cicd.py  test_cli.py  test_cross_platform.py  test_deploy.py  test_diff_analyzer.py  test_integration.py  test_ios_analyzer.py  test_masvs_mapper.py  test_models.py  test_portfolio_bridge.py  test_privacy_engine.py  test_remediation.py  test_reports.py  test_resilience.py  test_sbom_generator.py  test_scanner.py  test_secrets_scanner.py  test_stix_export.py  test_yara_engine.py
tests/fixtures/: build_test_apk.py  build_test_ipa.py  clean_test.apk  vulnerable_test.apk  vulnerable_test.ipa
