[project]
name = "mobiussec"
version = "0.1.0"
description = "Unified mobile security platform — Android + iOS analysis in one tool"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Raphael"}]
keywords = ["mobile-security", "android", "ios", "masvs", "owasp", "appsec"]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "lxml>=5.0",
    "biplist>=1.0.3",
    "yara-python>=4.5",
    "semgrep>=1.60",
    "cyclonedx-python-lib>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-rich>=0.1",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
mobius = "mobiussec.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core/mobiussec"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["core"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true